[gd_scene load_steps=8 format=3 uid="uid://cfmd3p4s6tbc"]

[ext_resource type="Script" uid="uid://ciuiuj7meqpgk" path="res://objects/creatures/player.gd" id="1_3uilo"]
[ext_resource type="Script" uid="uid://b4ojnrwb4y7xa" path="res://interact_component.gd" id="2_mlvsf"]
[ext_resource type="Script" uid="uid://i51awfma4bnn" path="res://classes/components/health_component.gd" id="3_gnl1n"]
[ext_resource type="PackedScene" uid="uid://den1gbs8ttdem" path="res://classes/slot_object.tscn" id="5_nfudj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2qutk"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uilo"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b83qq"]
size = Vector2(192, 16)

[node name="Player" type="RigidBody2D"]
script = ExtResource("1_3uilo")
metadata/_custom_type_script = "uid://d2w01vvsrf0e3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2qutk")

[node name="Components" type="Node" parent="."]

[node name="InteractComponent" type="Area2D" parent="Components"]
script = ExtResource("2_mlvsf")
metadata/_custom_type_script = "uid://b4ojnrwb4y7xa"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/InteractComponent"]
shape = SubResource("RectangleShape2D_3uilo")
disabled = true

[node name="HealthComponent" type="Node2D" parent="Components"]
script = ExtResource("3_gnl1n")
metadata/_custom_type_script = "uid://i51awfma4bnn"

[node name="Sprites" type="Node" parent="."]

[node name="Torso" type="Polygon2D" parent="Sprites"]
polygon = PackedVector2Array(0, -16, -12, -12, -16, 0, -12, 12, 0, 16, 12, 12, 16, 0, 12, -12)

[node name="Frills" type="Polygon2D" parent="Sprites"]
visible = false
position = Vector2(16, 0)
rotation = 1.5708
scale = Vector2(0.25, 0.25)
polygon = PackedVector2Array(-80.0001, -15.9997, 79.9999, -16.0003, 112, 15.9996, 96.0001, 15.9997, 80, -0.000289917, 0, 0, -64, 0.000232697, -80, 0.000289917, -95.9999, 16.0003, -112, 16.0004)

[node name="HolsterH1" type="Polygon2D" parent="Sprites"]
position = Vector2(-16, 0)
polygon = PackedVector2Array(-8, -12, 0, -12, 0, 12, -8, 12)

[node name="HolsterM1" type="Polygon2D" parent="Sprites"]
position = Vector2(0, -16)
rotation = 3.14159
polygon = PackedVector2Array(-12, 1.90735e-06, 12, -9.53674e-07, 12, 4, -12, 4)

[node name="HolsterL1" type="Polygon2D" parent="Sprites"]
position = Vector2(4, 16)
polygon = PackedVector2Array(-8, 0, 4, 0, 4, 4, -4, 4)

[node name="HolsterL2" type="Polygon2D" parent="Sprites"]
position = Vector2(-8, 16)
polygon = PackedVector2Array(-8, 0, 4, 0, 4, 4, -4, 4)

[node name="Skeleton" type="Node2D" parent="."]

[node name="Torso" type="Node2D" parent="Skeleton"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso"]
remote_path = NodePath("../../../Sprites/Torso")

[node name="InteractTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso"]
remote_path = NodePath("../../../Components/InteractComponent")

[node name="HandL" parent="Skeleton/Torso" instance=ExtResource("5_nfudj")]
position = Vector2(16, -12)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso/HandL"]
position = Vector2(0, -8)

[node name="HandR" parent="Skeleton/Torso" instance=ExtResource("5_nfudj")]
position = Vector2(16, 12)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso/HandR"]
position = Vector2(0, 16)

[node name="Frills" type="StaticBody2D" parent="Skeleton/Torso"]
position = Vector2(16, 0)
rotation = 1.5708
scale = Vector2(0.25, 0.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton/Torso/Frills"]
shape = SubResource("RectangleShape2D_b83qq")
disabled = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso/Frills"]
remote_path = NodePath("../../../../Sprites/Frills")

[node name="Inventory" type="Node" parent="Skeleton/Torso"]

[node name="SlotHeavy1" parent="Skeleton/Torso/Inventory" instance=ExtResource("5_nfudj")]
position = Vector2(-20, 0)
slot_weight = 3

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso/Inventory/SlotHeavy1"]
position = Vector2(4, 0)
remote_path = NodePath("../../../../../Sprites/HolsterH1")

[node name="SlotMedium1" parent="Skeleton/Torso/Inventory" instance=ExtResource("5_nfudj")]
position = Vector2(0, -16)
slot_weight = 2

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso/Inventory/SlotMedium1"]
rotation = 3.14159
remote_path = NodePath("../../../../../Sprites/HolsterM1")

[node name="SlotLight1" parent="Skeleton/Torso/Inventory" instance=ExtResource("5_nfudj")]
position = Vector2(4, 16)
constant_linear_velocity = Vector2(-8.94, 0)
slot_weight = 1

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso/Inventory/SlotLight1"]
remote_path = NodePath("../../../../../Sprites/HolsterL1")

[node name="SlotLight2" parent="Skeleton/Torso/Inventory" instance=ExtResource("5_nfudj")]
position = Vector2(-8, 16)
slot_weight = 1

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton/Torso/Inventory/SlotLight2"]
remote_path = NodePath("../../../../../Sprites/HolsterL2")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-8, 4)
rect = Rect2(-288, -162, 576, 324)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -288.0
offset_top = -162.0
offset_right = 288.0
offset_bottom = 162.0

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.05
anchor_right = 0.85
anchor_bottom = 0.05
offset_left = -64.0
offset_right = 64.0
offset_bottom = 16.0
grow_horizontal = 0
pivot_offset = Vector2(48, 8)

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[connection signal="body_entered" from="Components/InteractComponent" to="." method="_on_interact_component_body_entered"]
[connection signal="body_exited" from="Components/InteractComponent" to="." method="_on_interact_component_body_exited"]
